# QuantLab

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
build-wsl/tests/cpp/: test_backtester[1]_include.cmake  test_monte_carlo[1]_include.cmake  test_order_book[1]_include.cmake  test_portfolio_optimizer[1]_include.cmake  test_risk_engine[1]_include.cmake
cpp/include/backtester/: backtester.hpp
cpp/include/common/: types.hpp
cpp/include/execution_simulator/: execution_simulator.hpp
cpp/include/market_data/: data_provider.hpp
cpp/include/matching_engine/: matching_engine.hpp
cpp/include/monte_carlo/: monte_carlo.hpp
cpp/include/order_book/: order_book.hpp
cpp/include/portfolio_optimizer/: portfolio_optimizer.hpp
cpp/include/risk_engine/: risk_engine.hpp
cpp/src/: CMakeLists.txt
cpp/src/backtester/: backtester.cpp
cpp/src/execution_simulator/: execution_simulator.cpp
cpp/src/market_data/: data_feed.cpp
cpp/src/matching_engine/: matching_engine.cpp
cpp/src/monte_carlo/: monte_carlo.cpp
cpp/src/order_book/: order_book.cpp
cpp/src/portfolio_optimizer/: portfolio_optimizer.cpp
cpp/src/risk_engine/: risk_engine.cpp
dashboard/: streamlit_app.py
docker/: Dockerfile  docker-compose.yml
python/: __init__.py  requirements.txt  research_pipeline.py
python/feature_engineering/: __init__.py  features.py
python/live_trading/: __init__.py  alpaca_trader.py
python/machine_learning/: __init__.py  models.py
python/market_data/: __init__.py  alpaca_provider.py  base.py  config.py  polygon_provider.py  yfinance_provider.py
python/performance_analytics/: __init__.py  metrics.py
python/quantlab_cpp/: __init__.py
python/statistical_research/: __init__.py  stat_models.py
python/strategy_research/: __init__.py  strategies.py
python_bindings/: CMakeLists.txt
python_bindings/src/: order_book_bindings.cpp
research/notebooks/: strategy_template.ipynb
research/reports/: equity_curve.csv  portfolio_returns.csv  summary.json  weights.csv
scripts/: benchmark_backtester_binding.py  benchmark_orderbook.py  build.sh  run_research_pipeline.py  setup_python.sh  smoke_cpp_binding.py
tests/cpp/: CMakeLists.txt  test_backtester.cpp  test_monte_carlo.cpp  test_order_book.cpp  test_portfolio_optimizer.cpp  test_risk_engine.cpp
tests/python/: conftest.py  test_feature_engineering.py  test_market_data_providers.py  test_performance_analytics.py  test_quantlab_cpp_bindings.py  test_research_pipeline.py  test_statistical_research.py
